# FinanceTracker

./: .eslintrc  .gitignore  .mailmap  .mocharc.json  README.md  db.db  electron-builder.json  index.html  jest.config.js  jest.config.ts  package-lock.json  package.json  svelte.config.js  tsconfig.json  tuntikirjanpito.md  vite.config.ts  webpack-electron.config.ts  webpack-renderer.config.ts
backend/: .gitignore  app.ts  index.ts  package-lock.json  package.json  types.ts
backend/models/: budget.ts  category.ts  transaction.ts
backend/requests/: create_transaction.rest  get_transaction_by_category.rest  get_transaction_by_category_and_date.rest  get_transaction_by_id.rest  get_transactions_of_month.rest
backend/routes/: budgets.ts  categories.ts  transactions.ts
backend/services/: transactionService.ts
backend/utils/: filters.ts  index.ts  parsers.ts  toCategory.ts  toNewBudget.ts  toNewBudgets.ts  toNewCategory.ts  toNewTransaction.ts  validation.ts
database/: db.db
db/: db.db  testdb.db
frontend/: .eslintcache  package-lock.json  package.json  tsconfig.json
frontend/electron/: main.ts
frontend/src/: App.tsx  index.tsx  rootReducer.ts  store.ts  theme.ts  types.ts
public/: index.html
src/: app.css  app.html  index.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: db.db
src-tauri/src/: data_access.rs  handler.rs  main.rs
src-tauri/src/data_access/: application.rs  balance_log.rs  budget.rs  category.rs  label.rs  notification.rs  recurring_expense.rs  transaction.rs  types.rs
src-tauri/src/handler/: application.rs  balance_log.rs  budget.rs  category.rs  label.rs  notification.rs  recurring_expense.rs  transaction.rs
src/__tests__/: AppTest.ts  jest.config.electron.ts  test.db
src/electron/: NotificationProcessing.ts  RecurringExpenseProcessing.ts  main.ts  processRecurringExpenses.ts  tsconfig.json
src/lib/: SideNav.svelte  startup.ts  stores.ts  typechecks.ts  types.ts
src/react/: App.css  App.tsx  index.tsx  rootReducer.ts  theme.ts  types.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  __layout.svelte  balances.svelte  index.svelte  recurring.svelte  year.svelte  (+1 more)
(+370 files in other folders)
