[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Toni Ojala"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.92"
chrono = "0.4.23"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
